Resolve TODOs